# ultimate-productivity-app

./: .gitignore  LICENSE  README.md  RELEASE_CHECKLIST.md  docker-compose.dev.yml  productivity-app-roadmap.md  ultiq-roadmap.md
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-backend.yml  deploy-landing.yml  deploy-web.yml
android/: build.gradle.kts  keystore.properties.example  settings.gradle.kts
android/app/: build.gradle.kts  lint-baseline.xml  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/app/productivity/: MainActivity.kt  ProductivityApp.kt
android/app/src/main/java/com/app/productivity/navigation/: AppNavigation.kt
android/app/src/main/java/com/app/productivity/receiver/: BedtimeReminderReceiver.kt  BootReceiver.kt  EventReminderReceiver.kt  (+2 more)
android/app/src/main/java/com/ultiq/app/: MainActivity.kt  UltiqApp.kt
android/app/src/main/res/drawable/: ic_coach_mascot.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml  ic_notification.xml  ic_widget_checkbox.xml  widget_card_bg.xml  widget_pill_bg.xml  widget_preview_calendar.xml  widget_preview_checklist.xml  widget_preview_focus.xml  widget_preview_sleep_alarm.xml
android/app/src/main/res/layout/: widget_calendar_preview.xml  widget_calendar_row.xml  widget_calendar_rv.xml  widget_checklist_preview.xml  widget_checklist_row.xml  widget_checklist_rv.xml  widget_focus_chronometer.xml  widget_focus_rv.xml  widget_sleep_alarm_preview.xml  widget_sleep_alarm_rv.xml
android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/values-ar/: strings.xml
android/app/src/main/res/values-b+pt+BR/: strings.xml
android/app/src/main/res/values-b+zh+Hans/: strings.xml
android/app/src/main/res/values-b+zh+Hant/: strings.xml
android/app/src/main/res/values-de/: strings.xml
android/app/src/main/res/values-es/: strings.xml
android/app/src/main/res/values-fr/: strings.xml
android/app/src/main/res/values-hi/: strings.xml
android/app/src/main/res/values-in/: strings.xml
android/app/src/main/res/values-ja/: strings.xml
android/app/src/main/res/values-ko/: strings.xml
android/app/src/main/res/values-night/: colors.xml
android/app/src/main/res/values-th/: strings.xml
android/app/src/main/res/values-vi/: strings.xml
android/app/src/main/res/xml/: backup_rules.xml  calendar_widget_info.xml  checklist_widget_info.xml  data_extraction_rules.xml  focus_widget_info.xml  locales_config.xml  network_security_config.xml  sleep_alarm_widget_info.xml
android/ci/: google-services.stub.json
backend/: .dockerignore  Cargo.toml  Dockerfile
backend/db-backup/: Dockerfile  backup.sh
backend/src/: ai.rs  config.rs  email.rs  email_templates.rs  error.rs  event_bus.rs  fcm.rs  i18n.rs  main.rs  scheduler.rs  sleep_audio_clips.rs  ticket.rs  totp.rs  turnstile.rs  tz.rs
backend/src/middleware/: auth.rs
backend/src/migrations/: 001_create_users.sql  002_create_sleep_tables.sql  003_create_sessions.sql  004_create_calendar.sql  005_create_checklist.sql  006_create_password_reset_tokens.sql  007_add_sleep_target.sql  009_bootstrap_admin.sql  010_add_token_version.sql  011_add_calendar_is_done.sql  012_create_alarms_tables.sql  013_alarms_snooze_max_smallint.sql  014_user_preferences_jsonb.sql  015_checklist_schedule_fields.sql  016_create_ai_tables.sql  017_session_debrief.sql  018_device_tokens.sql  019_create_sleep_audio_events.sql  020_calendar_reminder_minutes.sql  021_calendar_reminder_minutes_array.sql  022_user_timezone.sql  023_sleep_audio_clips.sql  024_checklist_completions.sql  025_admin_audit_log.sql  026_email_verification.sql  027_user_is_pro.sql  028_user_totp.sql  029_calendar_recurrence_overrides.sql  030_recorded_tz_anchor.sql  031_calendar_event_tz.sql  032_add_is_nap_to_sleep_records.sql
backend/src/models/: ai.rs  alarm.rs  calendar.rs  checklist.rs  device_token.rs  mod.rs  phone_pickup.rs  session.rs  sleep.rs  sleep_audio.rs  user.rs
backend/src/routes/: admin.rs  ai.rs  alarms.rs  auth.rs  calendar.rs  checklist.rs  devices.rs  mod.rs  phone_pickups.rs  sessions.rs  sleep.rs  sleep_audio.rs  sync.rs  validation.rs
scripts/: i18n-web-check.sh
web-dashboard/: Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json  preinit.js  tailwind.config.js
web-dashboard/locales/: ar.json  de.json  en.json  es.json  fr.json  hi.json  id.json  ja.json  ko.json  pt-BR.json  th.json  vi.json  zh-Hans.json  zh-Hant.json
web-dashboard/scripts/: apply-security-headers.sh  provision-aws.sh
web-dashboard/src/: app.rs  auth.rs  i18n.rs  main.rs  sleep_day.rs  stats.rs  theme.rs
web-dashboard/src/api/: admin.rs  ai.rs  auth.rs  calendar.rs  checklist.rs  client.rs  mod.rs  sessions.rs  sleep.rs  sse.rs
web-dashboard/src/components/: ai_parse_dialog.rs  email_verification_banner.rs  language_picker.rs  layout.rs  mod.rs  theme_corner.rs
web-dashboard/src/pages/: admin.rs  calendar.rs  chat.rs  checklist.rs  correlations.rs  focus.rs  forgot_password.rs  login.rs  mod.rs  overview.rs  reports.rs  reset_password.rs  sleep.rs  verify_email.rs
web-dashboard/style/: input.css
web-landing/: README.md  package-lock.json  package.json
web-landing/app/: globals.css  i18n.tsx  layout.tsx  legal.tsx  page.tsx
web-landing/app/delete-account/: page.tsx
web-landing/app/privacy/: page.tsx
web-landing/app/reset/: page.tsx
web-landing/app/terms/: page.tsx
web-landing/locales/: ar.json  de.json  en.json  es.json  fr.json  hi.json  id.json  ja.json  ko.json  pt-BR.json  th.json  vi.json  zh-Hans.json  zh-Hant.json
web-landing/public/: version.json
web-landing/public/.well-known/: assetlinks.json
(+278 files in other folders)
