[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.9", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
argon2 = "0.5"
dotenvy = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
# §i18n (v2.13.9) — IANA timezone string parsing for per-user "today"
# bucketing. chrono-tz bundles the IANA tz database at compile time so
# we don't need a runtime lookup; matches the chrono major version.
chrono-tz = "0.10"
tower-http = { version = "0.5", features = ["cors", "limit", "set-header"] }
tower = "0.5"
tower_governor = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sha2 = "0.11"
subtle = "2"
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"

# AWS Bedrock (§9.3) — Claude calls go via Bedrock with ECS-task-role IAM,
# no API key. `behavior-version-latest` opts into current SDK defaults and
# suppresses the deprecation warning the SDK emits otherwise.
#
# `default-features = false` on bedrockruntime is critical: its default
# feature set enables a legacy `rustls` (0.21) chain in parallel with the
# secure `default-https-client` (rustls 0.23) chain. The legacy chain pulls
# in rustls-webpki 0.101.x which has three open Dependabot advisories (one
# HIGH — DoS via malformed CRL BIT STRING). Re-enabling only `rt-tokio` +
# `default-https-client` keeps the SDK fully functional while dropping the
# vulnerable transitive.
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-bedrockruntime = { version = "1", default-features = false, features = ["rt-tokio", "default-https-client"] }
# Pulled in transitively by aws-sdk-bedrockruntime — listed explicitly so we
# can reach the `Document` / `Number` types used to construct tool input
# schemas and to decode tool_use blocks in §9.5 NL parse.
aws-smithy-types = "1"
# §10.x — S3 client for sleep-audio Pro-tier clips. Same secure feature set
# as the Bedrock SDK above (no legacy rustls-webpki 0.101 chain).
aws-sdk-s3 = { version = "1", default-features = false, features = ["rt-tokio", "default-https-client"] }
