[package]
name = "web-dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_router = "0.8"
leptos_meta = "0.8"
gloo-net = { version = "0.6", features = ["http"] }
gloo-storage = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde", "wasmbind", "unstable-locales"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Navigator", "Location", "History", "EventSource", "MessageEvent", "ErrorEvent", "Document", "Element", "DomTokenList", "MediaQueryList", "Blob", "BlobPropertyBag", "Url"] }
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
